--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["a.power@1aim.com"]
 description = "Easily deserialize postgres rows"
 license = "MIT/Apache-2.0"
-name = "serde_postgres"
+name = "pgrow2serde"
 homepage = "https://github.com/1aim/serde_postgres"
 repository = "https://github.com/1aim/serde_postgres.git"
 version = "0.1.0"
@@ -19,7 +19,7 @@ tokio-postgres = "0.7.8"
 [dev-dependencies]
 postgres = "0.19.5"
 serde = { version = "1.0.171", features = ["derive"] }
-tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.29.1", features = ["macros"] }
 tokio-postgres = "0.7.8"
 
 # [dependencies]
