change home and repo url

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,8 @@ authors = ["a.power@1aim.com"]
 description = "Easily deserialize postgres rows"
 license = "MIT/Apache-2.0"
 name = "pgrow2serde"
-homepage = "https://github.com/1aim/serde_postgres"
-repository = "https://github.com/1aim/serde_postgres.git"
+homepage = "https://github.com/deknowny/pgrow2serde"
+repository = "https://github.com/deknowny/pgrow2serde"
 version = "0.1.0"
 edition = "2018"
 
